--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "edo.js": "^1.2.13"
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
+    "edo.js": "^1.2.13",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
